# adventofcode

./: .gitignore  Makefile  README.md
2017/: Makefile
2017/inputs/: day07.txt  day09.txt
2017/nim/: day01.nim  day02.nim  day03.nim  day04.nim  day05.nim  day06.nim  day07.nim  day08.nim  day09.nim  day10.nim
2018/: Makefile
2018/inputs/: day01.txt  day04.txt
2018/nim/: day02.nim  day03.nim
2018/python/: day02.py  day03.py  day04.py
2019/data/: day01.txt  day02.txt  day03.txt
2019/julia/: Manifest.toml  Project.toml  day01.jl  day02.jl  day03.jl  day04.jl  day05.jl  day06.jl  day07.jl  day08.jl  day09.jl  day10.jl  day11.jl  day12.jl  vm.jl
2019/julia/aoc/: Manifest.toml  Project.toml  README.md
2019/julia/aoc/src/: aoc.jl  vm.jl
2019/julia/aoc/test/: runtests.jl
2020/julia/: Manifest.toml  Project.toml
2020/julia/scripts/: generate.jl
2020/julia/src/day01/: README.md  script.jl
2020/julia/src/day02/: README.md  script.jl
2020/julia/src/day03/: README.md  script.jl
2020/julia/src/day04/: README.md  script.jl
2020/julia/src/day05/: README.md  script.jl
2020/julia/src/day06/: README.md  script.jl
2020/julia/src/day07/: script.jl
2020/julia/src/day08/: script.jl
2020/julia/src/day09/: script.jl
2020/julia/src/day10/: script.jl
2020/julia/src/day11/: script.jl
2020/julia/src/day12/: script.jl
2020/julia/src/day13/: script.jl
2020/julia/src/day14/: script.jl
2020/julia/src/day15/: script.jl
2020/julia/src/day16/: script.jl
2020/julia/src/day17/: script.jl
2020/julia/src/day18/: script.jl
2020/julia/src/day19/: script.jl
2020/julia/src/day20/: script.jl
2021/: Cargo.toml  README.md
2021/benches/: benchmark.rs
2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  event.rs  lib.rs  main.rs  problem.rs
2022/: Manifest.toml
2022/src/day01/: script.jl
2022/src/day02/: script.jl
2022/src/day07/: script.jl
2022/src/day10/: script.jl
nim/: day01.nim
puzzle-1/: main.nim
puzzle-2/: main.nim
python/: day01.py
(+39 files in other folders)
