[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
lazy_static = "1.4.0"
regex = "1"
anyhow = "1.0.43"
reqwest = { version = "0.11", features = ["blocking"] }
serde_scan = "0.4.1"
itertools = "0.10"
ndarray = "0.15.4"
