[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Dheepak Krishnamurthy <me@kdheepak.com>"]
description = "Advent of Code 2021"
repository = "https://github.com/kdheepak/adventofcode/tree/main/2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
hex = "0.4.3"
anyhow = "1.0.43"
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
clap = "3.0.0-beta.5"
crossterm = { version = "0.22.1", optional = true, default-features = false, features = ["event-stream"] }
futures = "0.3.16"
futures-timer = "3.0.2"
html2text = "*"
indoc = "1.0"
itertools = "0.10"
lazy_static = "1.4.0"
nalgebra = "*"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_scan = "0.4.1"
tui = { version = "0.16.0", optional = true, default-features = false }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

[features]
default = ["crossterm-backend"]
crossterm-backend = ["tui/crossterm", "crossterm"]


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
